--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1,6 +1,6 @@
 .app {
   height: 50vh;
-  width: 100%;
+  max-width: 100%;
   text-align: center;
 }
 
@@ -14,4 +14,9 @@
   font-size: 0.5em;
   padding: 20px;
   text-align: right;
+}
+
+.slider {
+  margin: auto;
+  width: 300px;
 }
