--- a/src/css/global.css
+++ b/src/css/global.css
@@ -20,3 +20,19 @@
   margin: auto;
   width: 300px;
 }
+
+.footer {
+  margin-top: 10px;
+  padding: 10px;
+  text-align: right;
+  font-size: 12px;
+}
+
+.footer a, a:visited {
+  color: goldenrod;
+  text-decoration: none;
+}
+
+.footer a:hover, a:visited:hover {
+  color: green;
+}
